<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- content description -->
    <string name="cd_profile_image">Profile image</string>
    <string name="cd_profile_preview_image">Profile image preview</string>
    <string name="cd_no_data_image">No data image</string>
    <string name="cd_inputs_error_icon">Warning inputs are empty or incorrect</string>

    <!-- main activity -->
    <string name="activity_main_toolbar_menu_darkmode">Toggle night mode</string>

    <!-- fragment 3 -->
    <string name="fragment_3_fab">Add</string>
    <string name="fragment_3_empty">Looks like no data found</string>
    <string name="fragment_3_progress">We are getting it for you</string>

    <!--fragment 2-->
    <string name="fragment_2_intent_chooser_title">Email to %s</string>

    <string name="fragment_2_getintouch">Get in touch</string>
    <string name="fragment_2_intent_extra">user details : %s %s %s</string>
    <string name="fragment_2_share_info_title">Share informations</string>
    <string name="fragment_2_name">%s %s</string>
    <string name="fragment_2_name_quoted">― %s %s</string>
    <string name="fragment_2_email">%s</string>
    <string name="fragment_2_phone">%s</string>
    <string name="fragment_2_fax">%s</string>
    <string name="fragment_2_country">%s</string>
    <string name="fragment_2_city">%s</string>
    <string name="fragment_2_job">%s</string>
    <string name="fragment_2_bio">%s</string>

    <!--fragment 1-->
    <string name="fragment_1_fab">Validate</string>

    <string name="fragment_1_error_message">%s</string>

    <string name="fragment_1_title_about">Additional informations</string>
    <string name="fragment_1_hint_fname">Enter your first name</string>
    <string name="fragment_1_hint_lname">Enter your last name</string>
    <string name="fragment_1_hint_email">Enter your email</string>
    <string name="fragment_1_hint_phone">Enter your phone number</string>
    <string name="fragment_1_hint_fax">Enter your fax</string>

    <string name="fragment_1_title_personal">Personal informations</string>
    <string name="fragment_1_hint_country">Enter your country</string>
    <string name="fragment_1_hint_city">Enter your city</string>
    <string name="fragment_1_hint_job">Enter your job</string>
    <string name="fragment_1_hint_bio">Enter your bio</string>
    <string name="fragment_1_hint_image">Attach an image</string>
    <string name="fragment_1_image_preview">%s</string>

    <string name="fragment_1_joinedAt">%s</string>

</resources>