<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginVertical="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_1_title_personal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="?attr/colorOnSurface"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"

        android:baselineAligned="false"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fname_wrapper"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_1_hint_fname"
                android:id="@+id/fname"
                android:inputType="text"
                android:textColor="?attr/colorOnSurface"
                android:background="@drawable/draw_rect_rounded"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lname_wrapper"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_1_hint_lname"
                android:id="@+id/lname"
                android:textColor="?attr/colorOnSurface"
                android:inputType="text"
                android:background="@drawable/draw_rect_rounded"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_1_hint_email"
            android:textColor="?attr/colorOnSurface"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/draw_rect_rounded"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_1_hint_phone"
            android:textColor="?attr/colorOnSurface"
            android:id="@+id/phone"
            android:inputType="phone|number"
            android:background="@drawable/draw_rect_rounded"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fax_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_1_hint_fax"
            android:textColor="?attr/colorOnSurface"
            android:id="@+id/fax"
            android:inputType="phone|number"
            android:background="@drawable/draw_rect_rounded"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>